--- a/sub_forms/checkout_page.resx
+++ b/sub_forms/checkout_page.resx
@@ -118,10 +118,100 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="PictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAACDQAAACICAYAAAASsymgAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
+        IgAALiIBquLdkgAABY5JREFUeF7t2bENgEAAAzH2X/pZ4AoqgpAjubkVcp1zAAAAAAAAAAA+JSMAAAAA
+        AAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAAAJYyAgAAAAAAAAAsZQQAAAAAAAAAWMoIAAAA
+        AAAAALCUEQAAAAAAAABgKSMAAAAAAAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAAAJYyAgAA
+        AAAAAAAsZQQAAAAAAAAAWMoIAAAAAAAAALCUEQAAAAAAAABgKSMAAAAAAAAAwFJGAAAAAAAAAICljAAA
+        AAAAAAAASxkBAAAAAAAAAJYyAgAAAAAAAAAsZQQAAAAAAAAAWMoIAAAAAAAAALCUEQAAAAAAAABgKSMA
+        AAAAAAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAAAJYyAgAAAAAAAAAsZQQAAAAAAAAAWMoI
+        AAAAAAAAALCUEQAAAAAAAABgKSMAAAAAAAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAAAJYy
+        AgAAAAAAAAAsZQQAAAAAAAAAWMoIAAAAAAAAALCUEQAAAAAAAABgKSMAAAAAAAAAwFJGAAAAAAAAAICl
+        jAAAAAAAAAAASxkBAAAAAAAAAJYyAgAAAAAAAAAsZQQAAAAAAAAAWMoIAAAAAAAAALCUEQAAAAAAAABg
+        KSMAAAAAAAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAAAJYyAgAAAAAAAAAsZQQAAAAAAAAA
+        WMoIAAAAAAAAALCUEQAAAAAAAABgKSMAAAAAAAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAA
+        AJYyAgAAAAAAAAAsZYSXmZmZmZmZmZmZmZmZmdnz1ecGv5MRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAA
+        AAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAA
+        AAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAA
+        AAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAAAABLGQEA
+        AAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADAUkYA
+        AAAAAAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQR
+        AAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAAACxl
+        BAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAAAABL
+        GQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADA
+        UkYAAAAAAAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAA
+        sJQRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAA
+        ACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAA
+        AABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGDnXDdVRWIM
+        L/XhDAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="PictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAACDQAAACICAYAAAASsymgAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
+        IgAALiIBquLdkgAABY5JREFUeF7t2bENgEAAAzH2X/pZ4AoqgpAjubkVcp1zAAAAAAAAAAA+JSMAAAAA
+        AAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAAAJYyAgAAAAAAAAAsZQQAAAAAAAAAWMoIAAAA
+        AAAAALCUEQAAAAAAAABgKSMAAAAAAAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAAAJYyAgAA
+        AAAAAAAsZQQAAAAAAAAAWMoIAAAAAAAAALCUEQAAAAAAAABgKSMAAAAAAAAAwFJGAAAAAAAAAICljAAA
+        AAAAAAAASxkBAAAAAAAAAJYyAgAAAAAAAAAsZQQAAAAAAAAAWMoIAAAAAAAAALCUEQAAAAAAAABgKSMA
+        AAAAAAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAAAJYyAgAAAAAAAAAsZQQAAAAAAAAAWMoI
+        AAAAAAAAALCUEQAAAAAAAABgKSMAAAAAAAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAAAJYy
+        AgAAAAAAAAAsZQQAAAAAAAAAWMoIAAAAAAAAALCUEQAAAAAAAABgKSMAAAAAAAAAwFJGAAAAAAAAAICl
+        jAAAAAAAAAAASxkBAAAAAAAAAJYyAgAAAAAAAAAsZQQAAAAAAAAAWMoIAAAAAAAAALCUEQAAAAAAAABg
+        KSMAAAAAAAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAAAJYyAgAAAAAAAAAsZQQAAAAAAAAA
+        WMoIAAAAAAAAALCUEQAAAAAAAABgKSMAAAAAAAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAA
+        AJYyAgAAAAAAAAAsZYSXmZmZmZmZmZmZmZmZmdnz1ecGv5MRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAA
+        AAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAA
+        AAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAA
+        AAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAAAABLGQEA
+        AAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADAUkYA
+        AAAAAAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQR
+        AAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAAACxl
+        BAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAAAABL
+        GQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADA
+        UkYAAAAAAAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAA
+        sJQRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAA
+        ACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAA
+        AABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGDnXDdVRWIM
+        L/XhDAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="PictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAACDQAAACICAYAAAASsymgAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
+        IgAALiIBquLdkgAABY5JREFUeF7t2bENgEAAAzH2X/pZ4AoqgpAjubkVcp1zAAAAAAAAAAA+JSMAAAAA
+        AAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAAAJYyAgAAAAAAAAAsZQQAAAAAAAAAWMoIAAAA
+        AAAAALCUEQAAAAAAAABgKSMAAAAAAAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAAAJYyAgAA
+        AAAAAAAsZQQAAAAAAAAAWMoIAAAAAAAAALCUEQAAAAAAAABgKSMAAAAAAAAAwFJGAAAAAAAAAICljAAA
+        AAAAAAAASxkBAAAAAAAAAJYyAgAAAAAAAAAsZQQAAAAAAAAAWMoIAAAAAAAAALCUEQAAAAAAAABgKSMA
+        AAAAAAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAAAJYyAgAAAAAAAAAsZQQAAAAAAAAAWMoI
+        AAAAAAAAALCUEQAAAAAAAABgKSMAAAAAAAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAAAJYy
+        AgAAAAAAAAAsZQQAAAAAAAAAWMoIAAAAAAAAALCUEQAAAAAAAABgKSMAAAAAAAAAwFJGAAAAAAAAAICl
+        jAAAAAAAAAAASxkBAAAAAAAAAJYyAgAAAAAAAAAsZQQAAAAAAAAAWMoIAAAAAAAAALCUEQAAAAAAAABg
+        KSMAAAAAAAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAAAJYyAgAAAAAAAAAsZQQAAAAAAAAA
+        WMoIAAAAAAAAALCUEQAAAAAAAABgKSMAAAAAAAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAA
+        AJYyAgAAAAAAAAAsZYSXmZmZmZmZmZmZmZmZmdnz1ecGv5MRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAA
+        AAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAA
+        AAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAA
+        AAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAAAABLGQEA
+        AAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADAUkYA
+        AAAAAAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQR
+        AAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAAACxl
+        BAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAAAABL
+        GQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADA
+        UkYAAAAAAAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAA
+        sJQRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAA
+        ACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAA
+        AABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGDnXDdVRWIM
+        L/XhDAAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="BunifuFlatButton1.Iconimage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wAAADsABataJCQAAABp0RVh0U29mdHdhcmUAUGFpbnQuTkVUIHYzLjUuMTAw9HKhAAANJElEQVR4Xu3d
+        vAAADrwBlbxySQAAABp0RVh0U29mdHdhcmUAUGFpbnQuTkVUIHYzLjUuMTAw9HKhAAANJElEQVR4Xu3d
         a+hsZRUGcC/lDUKzMFOzrJPKMeKIwqkvoeSH/GAgplkfNEhKyIikkqORhrdMEyGiAikIsoI0S0u6qZRm
         ec8isdLKboplalB28/SsWWvgz5ln73n3zN6zZ708D/zgsM563/0Oc/aZy77MTtu3bxeRBrQoIo4WRcTR
         oog4WhQRR4si4mhRRBwtioijRRFxtCgijhZFxNGiiDhaFBFHiyLiaFFEHC2KiKNFEXG0KCKOFkXE0aKI
