--- a/Form1.resx
+++ b/Form1.resx
@@ -29402,4 +29402,7 @@
         ADR0QgghJAKgoRNCCCFJHpH/D+Sph6SIOTPSAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="ErrorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
