--- a/sub_forms/Exams.resx
+++ b/sub_forms/Exams.resx
@@ -117,4 +117,35 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="PictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAACDQAAACICAYAAAASsymgAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
+        IgAALiIBquLdkgAABY5JREFUeF7t2bENgEAAAzH2X/pZ4AoqgpAjubkVcp1zAAAAAAAAAAA+JSMAAAAA
+        AAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAAAJYyAgAAAAAAAAAsZQQAAAAAAAAAWMoIAAAA
+        AAAAALCUEQAAAAAAAABgKSMAAAAAAAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAAAJYyAgAA
+        AAAAAAAsZQQAAAAAAAAAWMoIAAAAAAAAALCUEQAAAAAAAABgKSMAAAAAAAAAwFJGAAAAAAAAAICljAAA
+        AAAAAAAASxkBAAAAAAAAAJYyAgAAAAAAAAAsZQQAAAAAAAAAWMoIAAAAAAAAALCUEQAAAAAAAABgKSMA
+        AAAAAAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAAAJYyAgAAAAAAAAAsZQQAAAAAAAAAWMoI
+        AAAAAAAAALCUEQAAAAAAAABgKSMAAAAAAAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAAAJYy
+        AgAAAAAAAAAsZQQAAAAAAAAAWMoIAAAAAAAAALCUEQAAAAAAAABgKSMAAAAAAAAAwFJGAAAAAAAAAICl
+        jAAAAAAAAAAASxkBAAAAAAAAAJYyAgAAAAAAAAAsZQQAAAAAAAAAWMoIAAAAAAAAALCUEQAAAAAAAABg
+        KSMAAAAAAAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAAAJYyAgAAAAAAAAAsZQQAAAAAAAAA
+        WMoIAAAAAAAAALCUEQAAAAAAAABgKSMAAAAAAAAAwFJGAAAAAAAAAICljAAAAAAAAAAASxkBAAAAAAAA
+        AJYyAgAAAAAAAAAsZYSXmZmZmZmZmZmZmZmZmdnz1ecGv5MRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAA
+        AAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAA
+        AAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAA
+        AAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAAAABLGQEA
+        AAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADAUkYA
+        AAAAAAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQR
+        AAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAAACxl
+        BAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAAAABL
+        GQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADA
+        UkYAAAAAAAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAA
+        sJQRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAAAABLGQEAAAAAAAAAljICAAAAAAAA
+        ACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAA
+        AABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGDnXDdVRWIM
+        L/XhDAAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
