--- a/main_interface.resx
+++ b/main_interface.resx
@@ -544,6 +544,93 @@
         3If+H5qp4FJjZYRsAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="PictureBox6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAyAAAABkCAYAAAB+UVSPAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wQAADsEBuJFr7QAAADt0RVh0Q29tbWVudAB4cjpkOkRBRjVWVmRTcmFnOjIsajo1MTEyMDAwNDYwNjM4
+        NDI3OTkyLHQ6MjQwMTA4MjFCrhZuAAASuElEQVR4Xu3d+ZfOdfjH8e9/kGWQsWQLZUtS2bKcREYhytLp
+        YFSHFJUaS1E4WXOcOLK2ENoYW8RRlmTJMpasQxTC2A3DWMb1PdfVfOY76V1fTTOf+/O553md8zidxnXf
+        c5/7nh/er/u9/c8dd9whAAAAAOAHAggAAAAA3xBAAAAAAPiGAAIAAADANwQQAAAAAL4hgAAAAADwDQEE
+        AAAAgG8IIAAAAAB8QwABAAAA4BsCCAAAAADfEEAAAAAA+IYAAgAAAMA3BBAAAAAAviGAAAAAAPANAQQA
+        AACAbwggAAAAAHxDAMmmQIECpmDBglKoUCEAAAAgx3RM6Y0vXWPP/CpfBpDChQtLqVKlpEGDBtK1a1cZ
+        NmyYTJ06VebNmycLFiyQ5cuXy+bNm2XTpk0AAABAjqxbt04WLlxo48vZs2fL+PHjJSEhQdq0aSOVKlWS
+        YsWK5ctwkm8CSJEiRaR+/foycuRICxipqalCURRFURRFUZGoGzduyM6dO2XWrFnSrVs3KV26dL4JI1Ef
+        QCpWrChDhgyxGY1bKyMjQ65cuWJhJCUlRbZt22ZWrlwpiYmJNiMCAAAA5MSiRYtky5YtsnXrVtm9e7ec
+        PXtWLl26JNeuXcscjf5f6XhUZ0maN28uMTExznFttIjaAFKlShUZO3asXLhwIfNj/aPS0tJk165dMmHC
+        BImPj5eGDRtKmTJlnM8BAAAA5BYNFjVq1JDWrVvLwIEDZdmyZXLmzBm5fv165kj1j1q/fr20b98+aoNI
+        1AWQO++8UwYPHiwXL17M/AjFPtTt27fLoEGDpGbNms7HAQAAAH4rXry4dOzYUebOnSvnz5+XmzdvZo5g
+        RVavXm17ll2PC7OoCiAtW7a0tXRe6fSW7vd46qmnOH0AAAAAgVauXDnbr3z69OmsIKLbBcaMGSOxsbHO
+        x4RRVAQQPdVq6NChkp6ebh+U7u3QGY+4uDhnPwAAABBUuj1AT8y6fPmyjW21Nm7cKLVq1XL2h03oA4h+
+        QN9++23mRyO252PAgAF26pWrHwAAAAiDRo0ayYYNGzJHuSInT5605Vqu3jAJdQC59957JSkpKfMjEdmz
+        Z48dtevqBQAAAMJG9zfrbIhuLdBlWbokq0ePHs7esAhtANEpqH379mVGD5H58+fb5YKuXgAAACDM9PLs
+        c+fO2bhX7xB55513QrvHOZQBRGc+soePiRMn2k2Srl4AAAAgGjRr1kxOnTpl41+dDXnjjTecfUEXugCi
+        pwPoZYFejRs3zjahu3oBAACAaPLggw/KkSNHbBysy7G6d+/u7AuyUAWQokWL/mnDOeEDAAAA+c2jjz5q
+        R/Vq6d0hOjPi6guqUAWQUaNGZZ2JPGfOHLu4xdUHAAAARLNWrVplXbz9yy+/SIUKFZx9QRSaAPL0009n
+        nYWsS7DYcA4AAID8TK+e0C/nVWJiosTExDj7giYUAUTv+khOTrbwcebMGalbt66zDwAAAMgvChUqJHPn
+        zrUxslZ8fLyzL2hCEUD0Snqv+vTp4+wBAAAA8puKFStmbUo/dOiQ3H333c6+IAl8ANGd/t6Zx2vXrrXL
+        WFx9AAAAQH6kJ2Hp3SBaH3zwgbMnSAIfQD7++GN7M3X/h+74d/UAAAAAeU2XPJUsWdK2Azz00ENSunRp
+        KViwoLPXT7r3Y82aNTZmTklJsTvzXH1BEegAUrt27azZj6VLl0ZkY41ecKh/aHfddZf9kZUoUYKjfwEA
+        APKZevXqyZIlS7IORdK6dOmSfP311zZmdT3GT23btpWrV6/a63rvvfecPUER6AAyfPhwexOvX78uzZs3
+        d/bkBU23TZo0kQkTJsiuXbvk7Nmz9jr0Qz1+/LisWLFCBg4cGPh0CQAAgP/u+eeft7DhlXfylFd6SFKb
+        Nm2cj/WLflG/ZcsWez0HDhyQsmXLOvuCILABRGcedu/ebW+iTin5NfvxwAMP2GxLRkaG/e5/Kp2d0ZCk
+        syKu5wIAAEC4NW3aVFJTU23sp19Gz5w5U3r06CEvvfSSzX7oF+UaRvRiwEjPhLz44ov2OrXatWvn7AmC
+        wAaQuLg4uXbtmr2BCQkJzp7c1r59e0uwXunlLitXrpTRo0fba9CzlidNmmSp0ntt+ge3evVqO4HA9ZwA
+        AAAIrx9++MHGfLr0qmPHjn/591deeUXS09OtRwNJJPeEVK5cWY4dO2av5auvvnL2BEFgA4ju4Ne6cOGC
+        VK9e3dmTmzp16pQ1taZ/RNOmTZNKlSo5e1XLli1l48aN1q+1d+9eKV++vLMXAAAA4ZP9NFb9EtrVozR4
+        aJ04cSLiX0ovXLjQXsvhw4cDeyRvYAPI5s2b7c3T2QXdk+HqyS26qcib+dA/sueee87Zd6vY2Fj59NNP
+        bbmWzoQsXryYY4IBAACiROvWrW2JlVaHDh2cPapnz57Wo6WhxdXjF28Zlo5PGzRo4OyJtEAGEJ3x0CPE
+        tCZOnOjsyS0abryptStXrjin1v5JkSJF5PPPP7fHa/Xq1cvZBwAAgHDp1q1b5ghPpFatWs4e1aVLl8yu
+        yAeQ+vXrZ+1Z6devn7Mn0gIZQPQUAe8ylbzeQKP7PrxkO378eGfP/0eP6E1OTrbn2LNnjx3X6+oDAABA
+        eMTHx9v4TksPKnL1qCAFEP1yfN++ffZa5syZ4+yJtEAGEG/qSDd66yUvrp7coht0tH7//XfbuOPquR16
+        EoJXTzzxhLMHAAAA4RHGAKJWrVplr0VX+eT1VoacCGQAeffdd+1NO3r0aJ5u5NELBvVEK60FCxY4e25X
+        9mVjH374obMHAAAA4RHWAPLRRx/Za9GVOXq1hasnkgIZQPSUAa2kpKQ83dSdPTT81zVymi69y190M7qr
+        BwAAAOER1gCi41qtU6dOSalSpZw9kRTIADJ16lR703766ScpWrSosyc3NG7c2Daea93uyVf/xNvMrv91
+        /TsAAADCI6wB5PXXX7fXoqe8EkBuk7cvY9myZc5/zy0NGza0S2W09A/H1fNvrF271p5L1925/h0AAADh
+        EdYA0rlzZ3stetBS2bJlnT2RFMgAovsxtPJ6KVOVKlXk+PHj9rtGjBjh7LldOlPz888/23MlJiY6ewAA
+        ABBcBQoUMN7//9cAkv25/KTXSngVxIuy83UA0WPKvNDwX08J0DOX09LS7Ll0E72rBwAAAME1evRou9/N
+        OwSpa9euNrbTql279l/6Pa4Aoqe6zp07V+Li4v7Sn9cIIDkwe/Zse8O+++67PE+OeveH1sWLFy1EuHpu
+        x9ixY+159OhgXdrl6gEAAEAw6VIlb2VM37597WctW7aUq1ev2s80jNz6GE9CQoL16D12999/v/1s+/bt
+        9jMNIbf25zXvAkXdalCmTBlnTyQFMoBMmTLF3rSNGzfm6SZ0paHjwoUL9vt0xiUmJsbZ90/q1Kljm3y0
+        Vq5cmaPnAAAAQOSUKFHCroDQ8q5UqFq1qp0kpaVfkLtWy+gxtzpm1dILAPWC6sKFC2dd9TB9+vS/PCav
+        eZvQT58+zSb026UfupYuj9K7Olw9uUn/MLwaOXKkFCxY0Nnncs8998i2bdvssZoyW7Ro4ewDAABAsO3e
+        vdvGdEuXLs0aD86fP99+lpGRIb1797Zw4fUXL17cxq03b960nlGjRtnPa9SoYYP/7D/z05AhQ+x3Hzt2
+        zJex9L8VyADy1ltv2ZumiVM3irt6clOFChWy9oLoH5D+Id3O/SO6xk9vUPdK/8AitdkIAAAA/83kyZNt
+        TJeampo1BtUlVSdPnrSfa+lql/fff1/GjRsnO3fuzPypWHjxljvp/g+vIvHl9Jdffmm/W5eB6Z5nV08k
+        BTKAeCcO6Dq6unXrOntym/5xHTp0yH6v1o4dO2xDkU6j6QenKVin3XSaTafjxowZI+fPn8/s/uOYM53u
+        cj03AAAAgq9t27a2n1dLx3rezx9//HGbTXCVfnmtX2TXrFnTemNjY+0Gcq3k5OSI7MHwloT5sZ86JwIZ
+        QPS0AO/D13OMXT15QZPuhg0bsqbRtDQB688WLlxo03He1JxXepGhd/qVblJ67bXXnM8NAACAYNPlVT/+
+        +KON6/SLZt2E7v2bLrvXVTK6+kXHh0qDxttvv22hw+vT2RFvLNm/f/+sn/uldOnS8uuvv9rvnzlzprMn
+        0gIZQPToM29p04wZM5w9eUXX8unJB4cPH7ZZjb+r9PR0Wb9+vTRr1sxuVE9JSbGfE0IAAADCq0mTJlkH
+        FB05csR5uqmemHXr5m6dadBtBN6pWZs2bbKN7dl7/NC8efOs1/Dyyy87eyItkAFEeelTP7y8PgnLRf9g
+        2rdvLxMnTrTTsZKSkmw6a968eXbPh4aO7P23hpDBgwf/q83sAAAACAb9MtlbjaObyXWZvX5J7erV4FG5
+        cmX57LPPbKO6ln6R7h3H67d+/frZa9DX//DDDzt7Ii2wAWTo0KH25unJUkG40v52ZA8hOvWmm9IJIQAA
+        AOGjA3kdh3qly/B1X4juEdbVMs8884xtNp81a5bdJ+fVwYMHbRbF9Zx+WLVqlb0O3SAfxCN4VWADiA7m
+        vQ99xIgRzp4gatSoESEEAAAgCrRp08bu8/BmNv6pdOn+N998I5UqVXI+lx90xsM7JGnSpEnOniAIbADR
+        E6c2b95sb+CWLVtu61jcoHjkkUfkt99+s9dOCAEAAAgvPQG1T58+diiRbjzXU1q1NJToYUR6bURiYqK0
+        atXK+Xg/6YZ4LX2Nt24XCJLABhD15ptv2puo1alTJ2dPUFWrVi3rBkwNIbonxNUHAACAcChfvryFDS39
+        slmP5w3Kl+R6+pU39tQ91EH+8j7QAUSPO/NOw9LUqQnU1RdU2UOIXgQTttcPAACAP5s6daqN7fSOD70v
+        ztUTCbpR3quePXs6e4Ii0AFEDR8+3N5IXVfXoUMHZ0+Q6aWFc+bMCd0MDgAAAP4qiAFEjwXev3+/vS69
+        m0RnQ1x9QRH4AJJ9FmTv3r32Brv6AAAAgLw2ZcoUG5cGKYDofmOvevXq5ewJksAHEKVTSt6NktmvxQcA
+        AAD89Oqrr9qYVC+kDsLy+nr16mVdnLhu3bq/va8kSEIRQHQTzZo1a+yNTUtLsyPRXH0AAABAXtJxaefO
+        naVOnTrOf/dTyZIlbcO5N0Zu2rSpsy9oQhFAlB5te+7cOXuDDx8+bBu8XX0AAABAtNMrHmbMmGFjYy1d
+        huXqC6LQBBCla9q8a/H1VCz2gwAAACA/GjRokB3SpLV8+fJQ3ZkXqgBSoEABmTZtmr3Ruidk/vz5UqJE
+        CWcvAAAAEI1eeOEFuXz5so2J9T6SKlWqOPuCKlQBRGm6W7Jkib3hhBAAAADkJ9nDx9mzZ6VBgwbOviAL
+        XQBRerbxqlWr7I3XELJ06VKWYwEAACCq9enT50/hIy4uztkXdKEMIKpChQry/fff2weglZSUJNWrV3f2
+        AgAAAGEVExMjo0ePztrzoeGjXbt2zt4wCG0AUXr5i94y7tXJkyfl2Weftb0irn4AAAAgTPRS7hUrVmSO
+        dkWOHj0qjz32mLM3LEIdQFSRIkVkwoQJlgh1OdaNGzfkk08+sRkSVz8AAAAQdIUKFZLu3bvL8ePHLXjo
+        OFdX/NSsWdPZHyahDyCerl27yunTp+0D0jpx4oT07t07FLdBAgAAAEqDh95/5+131srIyJDp06dLbGys
+        8zFhEzUBRN13332yePFimwXxav/+/dK/f39brsXSLAAAAARR0aJFpUWLFrJs2bKssazOeugF3PpFu+sx
+        YRVVAcSj+0AOHjxoadEr3awze/ZsefLJJ+3aek2XrscCAAAAeU2/GNfrJWrUqCEjRoyQ7du3Z45a/6i0
+        tDQZN26cnf7qenyYRWUAUcWKFZOePXtKcnLyn2ZEtM6dO2dH944ZM0Y6d+4s9erVkzJlyth9Ikr/GDSF
+        AgAAADml41FvfFmqVCmpWrWqtG7dWgYMGCBffPGF7Nu3L3N0+kfpjEdqaqpMnjxZqlWr5hzjRoOoDSAe
+        /fB1RkRPy9LgkX1WJHvpz0+dOmUOHDhgm3y2bt0KAAAA5MiOHTskJSXFTmr17u9wVXp6uvVrMAnbreY5
+        EfUBJLty5cpJfHy8TJo0Sfbu3SsXL16UK1eu/G0ooSiKoiiKoqjcKp3huHbtmly6dMlCyaJFiyQhIcE2
+        nbvGrtEqXwWQW2kgady4sXTp0kX69u0rw4YNk5EjR8rYsWPtpAEAAAAgp6ZMmWL7O3R8qYci9erVy/Yj
+        676P/LwfOV8HEAAAAAD+IoAAAAAA8A0BBAAAAIBvCCAAAAAAfEMAAQAAAOAbAggAAAAA3xBAAAAAAPiG
+        AAIAAADANwQQAAAAAL4hgAAAAADwDQEEAAAAgG8IIAAAAAB8QwABAAAA4BsCCAAAAADfEEAAAAAA+IYA
+        AgAAAMA3BBAAAAAAPrlD/hcT+50n11dATwAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="PictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
