--- a/main_interface.resx
+++ b/main_interface.resx
@@ -547,7 +547,7 @@
   <data name="PictureBox6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAyAAAABkCAYAAAB+UVSPAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wQAADsEBuJFr7QAAADt0RVh0Q29tbWVudAB4cjpkOkRBRjVWVmRTcmFnOjIsajo1MTEyMDAwNDYwNjM4
+        wAAADsABataJCQAAADt0RVh0Q29tbWVudAB4cjpkOkRBRjVWVmRTcmFnOjIsajo1MTEyMDAwNDYwNjM4
         NDI3OTkyLHQ6MjQwMTA4MjFCrhZuAAASuElEQVR4Xu3d+ZfOdfjH8e9/kGWQsWQLZUtS2bKcREYhytLp
         YFSHFJUaS1E4WXOcOLK2ENoYW8RRlmTJMpasQxTC2A3DWMb1PdfVfOY76V1fTTOf+/O553md8zidxnXf
         c5/7nh/er/u9/c8dd9whAAAAAOAHAggAAAAA3xBAAAAAAPiGAAIAAADANwQQAAAAAL4hgAAAAADwDQEE
@@ -5939,6 +5939,82 @@
         ACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGApIwAAAAAAAADAUkYAAAAAAAAAgKWMAAAAAAAA
         AABLGQEAAAAAAAAAljICAAAAAAAAACxlBAAAAAAAAABYyggAAAAAAAAAsJQRAAAAAAAAAGDnXDdVRWIM
         L/XhDAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAMMOAADDDgAAAAAAAAAA
+        AAD/////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        //////////////////////////////////////////////////////////////z8/P/+/v7//f39//7+
+        /v/+/v7//v7+//7+/v/9/f3//f39//39/f///////f39//39/f/9/f3//f39//7+/v/8/Pz//f39//39
+        /f/8/Pz////////////////////////////////////////////////////////////9/f3/z8/P/93d
+        3f/S0tL/6urq/9/f3//l5eX/5+fn/87Ozv/b29v/2trb///////U1NT/4ODg/+Lh4v/T09P/4ODg/9LS
+        0v/X19j/3d3d/+Li4v/+/v7///////////////////////////////////////////////////////7+
+        /v/t7+f/8PPt/+/v7//5+fn/9vXz//L16f/v9e//7vDn//H06//t8+b/9v33//Hx6v/s9Ob/7fPu//Hy
+        6f/y9e7/8PHu/+7x6P/y9PH/+vn6////////////////////////////////////////////////////
+        ///////////7/7Htz/9ozO//5ez////////g+Nb/atrX/1XS8P9q2uL/adjh/1vQ4v9Z0+3/eN7h/1fP
+        4/9e1u//eN/b/2vO8P/Y6uj/eN7Y/5jR+v///f//////////////////////////////////////////
+        //////////////////////n/j+TQ/ySy/f/W4Pz////0/4biy/8fs/7/hsT4/0fR6/8ws/H/aLrU/zHH
+        6f8osPH/X7nS/yvH7P8cxvb/KLX//8Td5f89zuX/Zbb///77////////////////////////////////
+        ////////////////////////////////+f+R5NH/IcH4/27U5/+j6Oz/atja/y26//+/5t//WNfa/zrE
+        3P84x+H/PLLv/2q6yf8wxOf/R7Tp/1rJ0v8rt///xd3l/0DP5f9ntv///vv/////////////////////
+        ///////////////////////////////////////////5/5Hk0P8cuv7/VsD5/y/K9f9GvfH/Rsn7/za/
+        9P84wPj/SLfy/0/I9/8/vO//Yrvo/0nH+P9Fvur/TMvW/yu2///F3eX/Qc/l/2e2///++///////////
+        //////////////////////////////////////////////////////n/kOXQ/yi2+/+729n/S9Xf/z6v
+        ///Z5v//0eT//+Ht/v/i7P//7Pb//83k///g6f//6PT//9Hk+v+C29L/Kbr7/7Dd2P87zuf/YL31/+T1
+        8f/8/f//////////////////////////////////////////////////////////+v+U49X/H7/6/zbE
+        7f8kt/v/fbb///z6///7+vn/7+7u//j39v/w8PD/4uHh/9bV1//m5ub///74/5fk1f8dv/v/MMTy/yDB
+        +/8mwff/SLn2/+Do///////////////////////////////////////////////////////////+/9/y
+        +P+z2v//stn//8Ta///z9P////////7////e3+H/0NHU/9/f4f/W19n/srO4/4eIkP+2trn/0uPr/7Tb
+        //+y2v//tNr//7Pa//+42P//8/X/////////////////////////////////////////////////////
+        //////////////////////////////////////////////39/f/19fX/7u7v/+Pk5f+9vsL/k5Sa/6ip
+        rv/Pz9H/5OLj//v6+v//////////////////////////////////////////////////////////////
+        /////////////////////////////////////////////////////////Pz8//Pz9P/l5ef/ysvO/+Dg
+        4v/a2tz/5ufo/+3t7v/Gx8r/5+fp////////////////////////////////////////////////////
+        /////////////////////////////////////////////////////////////////////////v7+//z8
+        /P/8/Pz/7e3u/9nZ3P/g4OL/z9DT/+Dg4v/39/j/////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ///8/Pz/7+/w/+7u7//n5+j/0NDT/9nZ3P/o6Or/+/v7////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ///////////////////+/v7//Pz8//39/f/9/f3//v7+////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
 </value>
   </data>
 </root>
